Front : UI update

--- a/Groupomania_P7/frontend/src/styles/index.scss
+++ b/Groupomania_P7/frontend/src/styles/index.scss
@@ -1,1 +1,6 @@
 @import "./settings";
+@import "./components/navbar.scss";
+@import "./components/connectionForm";
+@import "./pages/home";
+@import "./pages/log";
+@import "./pages/profil";
