--- a/Groupomania_P7/frontend/src/styles/_settings.scss
+++ b/Groupomania_P7/frontend/src/styles/_settings.scss
@@ -1,1 +1,104 @@
-$color-1: #ff7b77;
+/*@font-face {
+  font-family: "font-1";
+  src: url(./assets/fonts/JosefinSans-ExtraLight.ttf);
+}
+@font-face {
+  font-family: "font-2";
+  src: url(./assets/fonts/JosefinSans-Regular.ttf);
+}
+@font-face {
+  font-family: "font-3";
+  src: url(./assets/fonts/JosefinSans-Bold.ttf);
+}*/
+
+$font-1: sans-serif;
+$font-2: serif;
+$font-3: serif;
+
+// Base Colors
+$color_black: black;
+$color_red: red;
+$color_white: white;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style-type: none;
+  outline: none;
+  border: none;
+  text-decoration: none;
+
+  &::selection {
+    background: $color_white;
+  }
+}
+a,
+a:visited {
+  color: $color_black;
+}
+input,
+textarea {
+  resize: none;
+  border-radius: 15px;
+  width: 270px;
+  min-height: 30px;
+  font-family: $font-1;
+  background: $color_white;
+}
+textarea {
+  &:focus {
+    box-shadow: 0 0 4px rgba(0, 22, 44, 0.1);
+  }
+}
+button,
+input[type="submit"] {
+  background: $color_white;
+  color: $color_black;
+  font-family: $font-3;
+  cursor: pointer;
+  transition: 0.2s;
+  margin: 0;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 1.1rem;
+  border-radius: 15px;
+
+  &:hover {
+    background: sandybrown;
+    color: $color_red;
+  }
+}
+input[type="checkbox"] {
+  box-shadow: none;
+  width: 20px;
+  margin: 10px 10px;
+}
+input[type="text"],
+input[type="password"] {
+  box-shadow: none;
+  width: 100%;
+  margin: 10px 0px;
+  padding-left: 10px;
+}
+i {
+  transition: 0.15s;
+
+  &:hover {
+    transform: scale(1.1);
+  }
+}
+body {
+  font-family: $font-2;
+  line-height: 1.4rem;
+  background: rgb(51, 50, 50);
+  color: $color_white;
+}
+.error {
+  color: red;
+  font-weight: bold;
+}
+.success {
+  color: green;
+  font-weight: bold;
+}
