--- a/Groupomania_P7/frontend/src/styles/_settings.scss
+++ b/Groupomania_P7/frontend/src/styles/_settings.scss
@@ -19,6 +19,7 @@ $font-3: serif;
 $color_black: black;
 $color_red: red;
 $color_white: white;
+$color_back_def: #ffd7d7;
 
 * {
   margin: 0;
@@ -51,6 +52,7 @@ textarea {
     box-shadow: 0 0 4px rgba(0, 22, 44, 0.1);
   }
 }
+
 button,
 input[type="submit"] {
   background: $color_white;
@@ -81,6 +83,13 @@ input[type="password"] {
   margin: 10px 0px;
   padding-left: 10px;
 }
+input[type="file"] {
+  box-shadow: none;
+  width: 100%;
+  margin: 10px 0px;
+  padding-left: 10px;
+  background: none;
+}
 i {
   transition: 0.15s;
 
@@ -101,4 +110,28 @@ body {
 .success {
   color: green;
   font-weight: bold;
+}
+
+.default_page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  max-width: 1200px;
+  min-height: 500px;
+  overflow: hidden;
+  margin: 75px auto 50px;
+  position: relative;
+
+  @media screen and(max-width: 990px) {
+    margin: 75px 20px 50px;
+  }
+
+  @media screen and(max-width: 590px) {
+    margin: 75px 8px 50px;
+
+    .log_container {
+      flex-direction: row;
+    }
+  }
 }
