--- a/Groupomania_P7/frontend/src/styles/pages/_profil.scss
+++ b/Groupomania_P7/frontend/src/styles/pages/_profil.scss
@@ -82,9 +82,8 @@
     img {
       height: 180px;
       width: 180px;
-      border-radius: 46px;
-      object-fit: cover;
-      margin-bottom: 30px;
+      border-radius: 50%;
+      object-fit: contain;
       box-shadow: 0 0 6px rgba(51, 51, 51, 0.363);
     }
   }
