--- a/Groupomania_P7/frontend/src/styles/components/_connectionForm.scss
+++ b/Groupomania_P7/frontend/src/styles/components/_connectionForm.scss
@@ -1,4 +1,5 @@
-.connection_from {
+.connection_from 
+{
   border: 2px solid $color_red;
   width: 400px;
   margin: 35px auto 0;
@@ -6,16 +7,19 @@
   user-select: none;
   text-align: center;
 
-  h3 {
+  h3 
+  {
     padding: 10px 0 15px;
   }
 
-  ul {
+  ul 
+  {
     padding: 10px;
     display: flex;
     justify-content: space-around;
 
-    li {
+    li 
+    {
       background: $color_white;
       color: $color_black;
       width: 130px;
@@ -25,15 +29,20 @@
       transition: 0.3s;
       box-shadow: 3px 3px 1px rgba(51, 51, 51, 0.418);
 
-      &:hover {
+      &:hover 
+      {
         background: $color_red;
       }
     }
   }
-  .active-btn {
+
+  .active-btn 
+  {
     background: $color_red;
   }
-  form {
+
+  form 
+  {
     width: 400px;
     margin: 10px auto 0;
     padding: 20px;
