--- a/Groupomania_P7/frontend/src/styles/pages/_profil.scss
+++ b/Groupomania_P7/frontend/src/styles/pages/_profil.scss
@@ -18,35 +18,76 @@
     //background-color: white;
     //overflow: hidden;
 
-    form {
+    form 
+    {
       position: relative;
 
+      .img_container
+      {
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 20px;
+
+        img
+        {
+          cursor: pointer;
+        }
+      }
+
+    
       label {
         position: relative;
         //transform: translate(-50%, -50%);
         width: 270px;
-        background: white;
-        color: black;
-        border-radius: 15px;
+        color: white;
+        
         display: inline-block;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        padding: 9px 0;
+        //margin-top: 10px;
+        //margin-bottom: 10px;
+        //padding: 9px 0;
         transition: 0.2s;
         z-index: 10;
         cursor: pointer;
 
         display: block;
-        text-align: center;
-        line-height: 150%;
+        text-align: left;
+        line-height: 100%;
       }
 
-      input[type="file"] {
-        position: absolute;
-        transform: translate(-3px, -50%);
+      .pict_label
+      {
+        position: relative;
+        transform: translate(50px, -160px);
+        width: 140px;
+        height: 140px;
+        background: white;
+        color: black;
+        border-radius: 50%;
+        display: inline-block;
+        /*margin-top: 10px;
+        margin-left: 10px;*/
+        //margin-bottom: 10px;
+        padding: 9px 0;
+        transition: 0.2s;
+        z-index: 10;
         cursor: pointer;
-        padding: 10px 20px;
         opacity: 0;
+
+        //display: block;
+        text-align: center;
+        line-height: 150%;
+        
+      }
+
+      input[type="file"] 
+      {
+        position:absolute;
+        transform: translate(-55px, -120px);
+        cursor: pointer;
+        //padding: 10px 20px;
+        opacity: 0;
+        height: 10px;
+        max-width: 100px;
       }
 
       input[type="submit"] {
@@ -56,6 +97,11 @@
         &:hover {
           letter-spacing: 1px;
         }
+      }
+
+      .form_item
+      {
+        transform: translate(0px, -150px);
       }
     }
   }
@@ -67,8 +113,8 @@
     background-color: white;
     align-items: center;
     align-content: center;
-    width: 200px;
-    height: 200px;
+    width: 140px;
+    height: 140px;
     text-align: center;
     border-radius: 50%;
 
@@ -81,8 +127,8 @@
       width: 150px;
     }*/
     img {
-      height: 180px;
-      width: 180px;
+      height: 130px;
+      width: 130px;
       border-radius: 50%;
       object-fit: contain;
       box-shadow: 0 0 6px rgba(51, 51, 51, 0.363);
