--- a/Groupomania_P7/frontend/src/styles/pages/_profil.scss
+++ b/Groupomania_P7/frontend/src/styles/pages/_profil.scss
@@ -22,16 +22,28 @@
     {
       position: relative;
 
+      p
+      {
+        text-align: center;
+      }
+
       .img_container
       {
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 20px;
+        overflow: hidden;
 
         img
         {
+          height: 130px;
+          width: 130px;
+          border-radius: 50%;
+          object-fit: contain;
+          box-shadow: 0 0 6px rgba(51, 51, 51, 0.363);
           cursor: pointer;
         }
+
       }
 
     
@@ -126,12 +138,6 @@
       padding: 5px;
       width: 150px;
     }*/
-    img {
-      height: 130px;
-      width: 130px;
-      border-radius: 50%;
-      object-fit: contain;
-      box-shadow: 0 0 6px rgba(51, 51, 51, 0.363);
-    }
+    
   }
 }
