--- a/Groupomania_P7/frontend/src/styles/_settings.scss
+++ b/Groupomania_P7/frontend/src/styles/_settings.scss
@@ -20,6 +20,7 @@ $color_black: black;
 $color_red: red;
 $color_white: white;
 $color_back_def: #ffd7d7;
+$checkbox_control_color: rebeccapurple;
 
 * {
   margin: 0;
@@ -71,11 +72,50 @@ input[type="submit"] {
     color: $color_red;
   }
 }
-input[type="checkbox"] {
+/*input[type="checkbox"] {
   box-shadow: none;
   width: 20px;
   margin: 10px 10px;
+}*/
+
+input[type="checkbox"] 
+{
+  appearance: none;
+  margin: 0;
+
+  font: inherit;
+  color: currentColor;
+  min-height: 25px;
+  width: 25px;
+  margin: 10px 10px;
+  //border: 2px solid whitesmoke;
+  border-radius: 50%;
+  display: grid;
+  place-content: center;
 }
+
+input[type="checkbox"]:focus
+{
+  border: 2px solid black;
+}
+
+input[type="checkbox"]::before 
+{
+  content: "";
+  width: 20px;
+  height: 20px;
+  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+  transform: scale(0);
+  transition: 120ms transform ease-in-out;
+  box-shadow: inset 1em 1em $checkbox_control_color;
+}
+
+input[type="checkbox"]:checked::before 
+{
+  transform: scale(0.8);
+}
+
+
 input[type="text"],
 input[type="password"] {
   box-shadow: none;
