--- a/Groupomania_P7/frontend/src/styles/pages/_home.scss
+++ b/Groupomania_P7/frontend/src/styles/pages/_home.scss
@@ -10,4 +10,76 @@
       width: 270px;
     }
   }
+
+  .newpost_container 
+  {
+    display: flex;
+    flex-direction: row;
+    background-color: $color_back_def;
+    padding: 10px 10px 10px 10px;
+    border-radius: 15px;
+    color: black;
+    width: 80%;
+
+    .new_post_left_container
+    {
+      display: flex;
+      flex-direction: row;
+      background-color: white;
+      align-content:flex-start;
+      max-width: 40px;
+      width: 40px;
+      height: 40px;
+      text-align: left;
+      border-radius: 50%;
+      margin-right: 10px;
+
+      img
+      {
+        height: 40px;
+        width: 40px;
+        border-radius: 50%;
+        object-fit: contain;
+        box-shadow: 0 0 6px rgba(51, 51, 51, 0.363);
+        cursor: pointer;
+      }
+    }
+
+    .new_post_main_container
+    {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      overflow: hidden;
+
+      .send_post_form
+      {
+        .post_text 
+        {
+          resize: none;
+          border-radius: 15px;
+          min-width: 100%;
+          min-height: 150px;
+          font-family: $font-1;
+          background: $color_white;
+          margin-bottom: 10px;
+          padding: 10px;
+        }
+  
+        .send_post
+        {
+          align-self: flex-end;
+        }
+      }
+
+      
+  
+      @media screen and(max-width: 590px) 
+      {
+        width: 100%;
+      }
+    }
+
+    
+  }
 }
