Front update Posts

--- a/Groupomania_P7/frontend/src/styles/_settings.scss
+++ b/Groupomania_P7/frontend/src/styles/_settings.scss
@@ -19,6 +19,8 @@ $font-3: serif;
 $color_black: black;
 $color_red: red;
 $color_white: white;
+$color_back_dark: #333232;
+$color_back_darklight: #7a7979;
 $color_back_def: #ffd7d7;
 $checkbox_control_color: rebeccapurple;
 
