--- a/Groupomania_P7/frontend/src/styles/components/_card.scss
+++ b/Groupomania_P7/frontend/src/styles/components/_card.scss
@@ -108,3 +108,35 @@
     }
   }
 }
+
+.card_footer
+{
+  display: flex;
+  flex-direction: column;
+  //background-color: aqua;
+  min-width: 100%;
+  align-items: flex-end; 
+
+  .edit_container
+  {
+    .comment_icon
+    {
+      img
+      {
+        width: 35px;
+        height: 35px;
+        min-width: 25px;
+        min-height: 25px;
+        filter: invert(73%) sepia(4%) saturate(200%) hue-rotate(314deg) brightness(121%) contrast(101%);
+      }
+
+      img:hover
+      {
+        filter: invert(73%) sepia(4%) saturate(800%) hue-rotate(314deg) brightness(121%) contrast(101%);
+      }
+    }
+  }
+
+  
+}
+
