--- a/Groupomania_P7/frontend/src/styles/components/_card.scss
+++ b/Groupomania_P7/frontend/src/styles/components/_card.scss
@@ -157,23 +157,106 @@
   .comments_container
   {
     min-width: 100%;
-    background-color: $color_back_def;
+    background-color: $color_back_dark;
+    border: 2px solid $color_back_def;
     border-radius: 20px;
 
     .comment_form
     {
+      background-color: $color_back_def;
       padding: 20px;
+      border-radius: 20px;
+      margin-bottom: 8px;
+      margin-left: 8px;
+      margin-right: 8px;
+
       input[type="text"] 
       {
         width: 100%;
-        //background: $color-4;
         border-radius: 20px 20px 6px 20px;
         padding: 20px;
         font-size: 1.2rem;
+        
 
+      }
+
+      input[type="text"]::placeholder
+      {
+        font-style: italic;
+      }
+    }
+
+    .comment_container
+    {
+      display: flex;
+      flex-direction: column;
+      //color: black;
+      background-color: $color_back_dark;
+      border-radius: 20px;
+      //border: 2px solid $color_back_def;
+      margin-top: 2px;
+      margin-left: 2px;
+      margin-right: 2px;
+
+      .comment_header
+      {
+        img
+        {
+          height: 30px;
+          width: 30px;
+          object-fit: contain;
+          border-radius: 50%;
+  
+        }
+  
+        @media screen and(max-width: 590px) 
+        {
+          margin-left: 0px;
+          margin-right: 0px;
+        }
+  
+        .avatar_container
+        {
+          background-color: white;
+          align-items: center;
+          align-content: center;
+          width: 30px;
+          height: 30px;
+          text-align: center;
+          border-radius: 50%;
+  
+          margin-left: 10px;
+          margin-right: auto;
+          margin-bottom: 5px;
+          margin-top: 5px;
+          overflow: hidden;
+          box-shadow: 0 0 6px rgba(51, 51, 51, 0.363);
+  
+          img
+          {
+            height: 30px;
+            width: 30px;
+            object-fit: contain;
+            border-radius: 50%;
+  
+          }
+  
+          @media screen and(max-width: 590px) 
+          {
+            margin-left: 0px;
+            margin-right: 0px;
+          }
+        }
+      }
+  
+      .comment_content
+      {
+        //padding-top: 5px;
+        padding-bottom: 5px;
+        padding-left: 10px;
+        padding-right: 10px;
       }
     }
   }
-  
 }
 
