--- a/Groupomania_P7/frontend/src/styles/pages/_home.scss
+++ b/Groupomania_P7/frontend/src/styles/pages/_home.scss
@@ -13,13 +13,14 @@
 
   .newpost_container 
   {
-    display: flex;
-    flex-direction: row;
+    display: block;
     background-color: $color_back_def;
     padding: 10px 10px 10px 10px;
     border-radius: 15px;
+    border: 2px solid $color_back_darklight;
     color: black;
     width: 80%;
+    margin-left: 10%;
 
     .new_post_left_container
     {
@@ -51,29 +52,28 @@
       flex-direction: column;
       width: 100%;
       overflow: hidden;
+      //border-radius: 20px 20px 6px 20px;
 
-      .send_post_form
+      textarea
       {
-        .post_text 
-        {
-          resize: none;
-          border-radius: 15px;
-          min-width: 100%;
-          min-height: 150px;
-          font-family: $font-1;
-          background: $color_white;
-          margin-bottom: 10px;
-          padding: 10px;
-        }
-  
-        .send_post
-        {
-          align-self: flex-end;
-        }
+        //resize:both;
+        border-radius: 20px 20px 6px 20px;
+        min-width: 100%;
+      }
+
+      .newpost_footer
+      {
+        display:inline-flex;
+        flex-direction: row;
+        align-items:center;
+        justify-content: flex-end;
+        min-width: 100%;
+        margin-top: 10px;
+
+       
       }
 
       
-  
       @media screen and(max-width: 590px) 
       {
         width: 100%;
