Post creation ok

--- a/Groupomania_P7/frontend/src/styles/index.scss
+++ b/Groupomania_P7/frontend/src/styles/index.scss
@@ -1,7 +1,9 @@
 @import "./settings";
 @import "./components/navbar.scss";
 @import "./components/connectionForm";
+@import "./components/newpost";
 @import "./components/card";
 @import "./pages/home";
 @import "./pages/log";
 @import "./pages/profil";
+
