--- a/Groupomania_P7/frontend/src/styles/pages/_home.scss
+++ b/Groupomania_P7/frontend/src/styles/pages/_home.scss
@@ -1,5 +1,7 @@
-.home_page {
-  .login_container {
+.home_page 
+{
+  .login_container 
+  {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -9,78 +11,6 @@
     button {
       width: 270px;
     }
-  }
-
-  .newpost_container 
-  {
-    display: block;
-    background-color: $color_back_def;
-    padding: 10px 10px 10px 10px;
-    border-radius: 15px;
-    border: 2px solid $color_back_darklight;
-    color: black;
-    width: 80%;
-    margin-left: 10%;
-
-    .new_post_left_container
-    {
-      display: flex;
-      flex-direction: row;
-      background-color: white;
-      align-content:flex-start;
-      max-width: 40px;
-      width: 40px;
-      height: 40px;
-      text-align: left;
-      border-radius: 50%;
-      margin-right: 10px;
-
-      img
-      {
-        height: 40px;
-        width: 40px;
-        border-radius: 50%;
-        object-fit: contain;
-        box-shadow: 0 0 6px rgba(51, 51, 51, 0.363);
-        cursor: pointer;
-      }
-    }
-
-    .new_post_main_container
-    {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      overflow: hidden;
-      //border-radius: 20px 20px 6px 20px;
-
-      textarea
-      {
-        //resize:both;
-        border-radius: 20px 20px 6px 20px;
-        min-width: 100%;
-      }
-
-      .newpost_footer
-      {
-        display:inline-flex;
-        flex-direction: row;
-        align-items:center;
-        justify-content: flex-end;
-        min-width: 100%;
-        margin-top: 10px;
-
-       
-      }
-
-      
-      @media screen and(max-width: 590px) 
-      {
-        width: 100%;
-      }
-    }
-
-    
   }
 }
 
