--- a/Groupomania_P7/frontend/src/styles/components/_card.scss
+++ b/Groupomania_P7/frontend/src/styles/components/_card.scss
@@ -1,11 +1,12 @@
 .card_container 
 {
-  display: grid;
+  //display: grid;
   grid-template-columns: 66px 1fr;
   border: 2px solid $color_back_def;
   background-color: $color_back_darklight;
   margin: 10px;
   padding: 16px;
+  padding-top: 5px;
   border-radius: 20px;
   margin: 8px auto;
   position: relative;
@@ -19,11 +20,22 @@
     max-width: 98%;
     grid-template-columns: 50px 1fr;
     padding: 10px;
+    padding-top: 5px;
   }
 }
 
-.card_left
+
+.card_header
 {
+  display: grid;
+  grid-template-columns: 40px 1fr 100px;
+  grid-template-rows: 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  align-items: center;
+  grid-gap: 5px;
+  height: 45px;
+
   .card_img_container
   {
     background-color: white;
@@ -33,12 +45,7 @@
     height: 40px;
     text-align: center;
     border-radius: 50%;
-
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 20px;
     overflow: hidden;
-    box-shadow: 0 0 6px rgba(51, 51, 51, 0.363);
 
     img
     {
@@ -55,37 +62,44 @@
       margin-right: 0px;
     }
   }
-}
 
-.card_right 
-{
-  .card_header 
+  .pseudo
   {
-    display: flex;
-    justify-content: space-between;
-    margin: 2px 0 4px;
-    min-height: 35px;
-
-    .pseudo
-    {
-      display: flex;
-    }
-
-    span 
-    {
-      font-style: italic;
-      font-family: $font-1;
-      font-size: 12px;
-
-      @media screen and(max-width: 440px) 
-      {
-        font-size: 11px;
-      }
-    }
+    //display: flex;
   }
 
+  span 
+  {
+    
+    text-align: end;
+    font-style: italic;
+    font-family: $font-1;
+    font-size: 12px;
+
+    @media screen and(max-width: 440px) 
+    {
+      font-size: 11px;
+    }
+  }
+}
+
+.card_content 
+{
+  margin-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+
+  @media screen and(max-width: 590px) 
+  {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+  
   .update_post
   {
+    display: flex;
+    flex-direction: column;
+
     textarea
     {
       font-size: 1.2rem;
@@ -94,13 +108,19 @@
       border-radius: 20px 20px 6px 20px;
       width: 100% !important;
       min-width: 100%;
-      min-height: 150px;
+      min-height: 100px;
+    }
+
+    .button_container
+    {
+      align-self: flex-end;
+      margin-top: 10px;
     }
   }
 
   .post_content
   {
-    margin-top: 10px;
+    margin-top: 15px;
     text-align: center;
     
     img
@@ -161,12 +181,12 @@
 
     .comment_form
     {
+      display: flex;
+      flex-direction: column;
       background-color: $color_back_def;
       padding: 20px;
       border-radius: 20px;
-      margin-bottom: 8px;
-      margin-left: 8px;
-      margin-right: 8px;
+      margin: 8px;
 
       input[type="text"] 
       {
@@ -174,14 +194,19 @@
         border-radius: 20px 20px 6px 20px;
         padding: 20px;
         font-size: 1.2rem;
-        
-
       }
 
       input[type="text"]::placeholder
       {
         font-style: italic;
       }
+
+      input[type="submit"]
+      {
+        align-self: flex-end;
+      }
+
+      
     }
 
     .comment_container
@@ -218,7 +243,7 @@
         {
           background-color: white;
           align-items: center;
-          align-content:   center;
+          align-content: center;
           width: 30px;
           height: 30px;
           max-width: 30px;
@@ -241,7 +266,7 @@
   
           @media screen and(max-width: 590px) 
           {
-            margin-left: 0px;
+            margin-left: 5px;
             margin-right: 0px;
           }
         }
@@ -269,13 +294,20 @@
         padding-left: 20px;
         padding-right: 20px;
 
+        @media screen and(max-width: 590px) 
+        {
+          padding-left: 10px;
+          padding-right: 0px;
+        }
+
         .edit_comment
         {
           display: flex;
           flex-direction: column;
-          //background-color: aqua;
           min-width: 100%;
-          //align-items: flex-end; 
+          align-items: flex-end;
+          margin-bottom: 10px;
+
         
           img
           {
@@ -295,6 +327,24 @@
           {
             display: inline-flex;
             align-items: center;
+          }
+
+          .edit_comment_form
+          {
+            display: flex;
+            flex-direction: column;
+            min-width: 100%;
+            align-items: flex-end;
+
+            .btn
+            {
+              display: flex;
+
+              span
+              {
+                margin-right: 10px;
+              }
+            }
           }
         }
 
