--- a/Groupomania_P7/frontend/src/styles/components/_newpost.scss
+++ b/Groupomania_P7/frontend/src/styles/components/_newpost.scss
@@ -6,8 +6,18 @@
     border-radius: 15px;
     border: 2px solid $color_back_darklight;
     color: black;
-    width: 80%;
-    margin-left: 10%;
+    margin: 0px auto;
+    min-width: 80%;
+    max-width: 80%;
+
+    @media screen and(max-width: 590px) 
+    {
+      min-width: 98%;
+      max-width: 98%;
+      grid-template-columns: 50px 1fr;
+      padding: 10px;
+      padding-top: 5px;
+    }
 
     .new_post_main_container
     {
