--- a/Groupomania_P7/frontend/src/styles/_settings.scss
+++ b/Groupomania_P7/frontend/src/styles/_settings.scss
@@ -192,16 +192,14 @@ body
   min-height: 500px;
   overflow: hidden;
   margin: 75px auto 50px;
+  margin-top: 60px;
   position: relative;
 
-  @media screen and(max-width: 990px) 
-  {
-    margin: 75px 20px 50px;
-  }
 
   @media screen and(max-width: 590px) 
   {
-    margin: 75px 8px 50px;
+    margin: 75px 8px;
+    margin-top: 60px;
 
     .log_container 
     {
