--- a/Groupomania_P7/frontend/src/styles/pages/_profil.scss
+++ b/Groupomania_P7/frontend/src/styles/pages/_profil.scss
@@ -56,6 +56,7 @@
           object-fit: contain;
           box-shadow: 0 0 6px rgba(51, 51, 51, 0.363);
           cursor: pointer;
+          z-index: 25;
         }
       }
 
@@ -75,16 +76,16 @@
       .pict_label
       {
         position: relative;
-        transform: translate(50px, -160px);
+        transform: translate(92px, -183px);
         width: 140px;
         height: 140px;
         background: white;
         color: black;
         border-radius: 50%;
         display: inline-block;
-        padding: 9px 0;
+        padding: 0px 0;
         transition: 0.2s;
-        z-index: 10;
+        z-index: 20;
         cursor: pointer;
         opacity: 0;
         text-align: center;
@@ -94,12 +95,16 @@
 
       input[type="file"] 
       {
-        position:absolute;
-        transform: translate(-55px, -120px);
+        position:relative;
+        transform: translate(-48px, -183px);
+        //transform: translate(92px, -183px);
+        padding: 0px;
+        margin-top: 0px;
         cursor: pointer;
         opacity: 0;
-        height: 10px;
-        max-width: 100px;
+        height: 140px;
+        max-width: 140px;
+        z-index: 0;
       }
 
       .modo_container
