--- a/Groupomania_P7/frontend/src/styles/pages/_home.scss
+++ b/Groupomania_P7/frontend/src/styles/pages/_home.scss
@@ -6,9 +6,13 @@
     flex-direction: column;
     align-items: center;
     align-content: center;
-    width: 100%;
+    //width: 100%;
+    background-color: $color_back_def;
+    padding: 20px;
+    border-radius: 20px;
 
-    button {
+    button 
+    {
       width: 270px;
     }
   }
