--- a/Groupomania_P7/frontend/src/styles/pages/_profil.scss
+++ b/Groupomania_P7/frontend/src/styles/pages/_profil.scss
@@ -6,8 +6,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-width: 80%;
-    min-height: 100%;
+    //min-width: 80%;
+    //min-height: 100%;
   }
 
   .update_container 
@@ -16,8 +16,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-width: 100%;
-    min-height: 100%;
+    background-color: $color_back_def;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: black;
+    margin-top: 10px;
+    border-radius: 20px;
+    //min-width: 100%;
+    //min-height: 100%;
     //background-color: white;
     //overflow: hidden;
 
@@ -48,6 +56,12 @@
         margin-bottom: 20px;
         overflow: hidden;
 
+        @media screen and(max-width: 590px) 
+        {
+          width: 100px;
+          height: 100px;
+        }
+
         img
         {
           height: 130px;
@@ -57,6 +71,12 @@
           box-shadow: 0 0 6px rgba(51, 51, 51, 0.363);
           cursor: pointer;
           z-index: 25;
+
+          @media screen and(max-width: 590px) 
+          {
+            width: 90px;
+            height: 90px;
+          }
         }
       }
 
@@ -64,7 +84,7 @@
       {
         position: relative;
         width: 280px;
-        color: white;
+        color: black;
         display: inline-block;
         transition: 0.2s;
         z-index: 10;
@@ -90,6 +110,13 @@
         opacity: 0;
         text-align: center;
         line-height: 150%;
+
+        @media screen and(max-width: 590px) 
+        {
+          height: 50px;
+          max-width: 100px;
+          transform: translate(113px, -92px);
+        }
         
       }
 
@@ -105,6 +132,13 @@
         height: 140px;
         max-width: 140px;
         z-index: 0;
+
+        @media screen and(max-width: 590px) 
+        {
+          height: 50px;
+          max-width: 100px;
+          transform: translate(13px, -123px);
+        }
       }
 
       .modo_container
@@ -113,6 +147,7 @@
         flex-direction: row;
         align-items: center;
         height: 30px;
+        margin-bottom: 10px;
       }
 
       .modo_pass_container
@@ -144,7 +179,13 @@
 
       .form_item
       {
-        transform: translate(0px, -150px);
+        transform: translate(0px, -100px);
+      }
+
+      button
+      {
+        width: 100%;
+        transform: translate(0px, -30px);
       }
     }
   }
