--- a/Groupomania_P7/frontend/src/styles/pages/_log.scss
+++ b/Groupomania_P7/frontend/src/styles/pages/_log.scss
@@ -29,7 +29,7 @@
   .form_container 
   {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     background-color: $color_back_def;
     padding: 20px;
     border-radius: 15px;
@@ -39,6 +39,11 @@
     @media screen and(max-width: 590px) 
     {
       flex-direction: column;
+    }
+
+    h4
+    {
+      margin-bottom: 20px;
     }
 
     form
