--- a/Groupomania_P7/frontend/src/styles/pages/_profil.scss
+++ b/Groupomania_P7/frontend/src/styles/pages/_profil.scss
@@ -70,7 +70,7 @@
           object-fit: contain;
           box-shadow: 0 0 6px rgba(51, 51, 51, 0.363);
           cursor: pointer;
-          z-index: 25;
+          z-index: 10;
 
           @media screen and(max-width: 590px) 
           {
@@ -96,7 +96,7 @@
       .pict_label
       {
         position: relative;
-        transform: translate(92px, -183px);
+        transform: translate(92px, -160px);
         width: 140px;
         height: 140px;
         background: white;
@@ -105,7 +105,7 @@
         display: inline-block;
         padding: 0px 0;
         transition: 0.2s;
-        z-index: 20;
+        //z-index: 20;
         cursor: pointer;
         opacity: 0;
         text-align: center;
@@ -123,7 +123,7 @@
       input[type="file"] 
       {
         position:relative;
-        transform: translate(-48px, -183px);
+        transform: translate(-48px, -163px);
         //transform: translate(92px, -183px);
         padding: 0px;
         margin-top: 0px;
@@ -131,7 +131,7 @@
         opacity: 0;
         height: 140px;
         max-width: 140px;
-        z-index: 0;
+        z-index: 10;
 
         @media screen and(max-width: 590px) 
         {
