--- a/Groupomania_P7/frontend/src/styles/components/_card.scss
+++ b/Groupomania_P7/frontend/src/styles/components/_card.scss
@@ -157,6 +157,7 @@
       min-width: 25px;
       min-height: 25px;
       margin-right: 10px;
+      cursor: pointer;
       filter: invert(73%) sepia(4%) saturate(200%) hue-rotate(314deg) brightness(121%) contrast(101%);
     }
 
@@ -314,6 +315,7 @@
             height: 30px;
             min-width: 25px;
             min-height: 25px;
+            cursor: pointer;
             filter: invert(73%) sepia(4%) saturate(200%) hue-rotate(314deg) brightness(121%) contrast(101%);
           }
 
