--- a/Groupomania_P7/frontend/src/styles/components/_newpost.scss
+++ b/Groupomania_P7/frontend/src/styles/components/_newpost.scss
@@ -68,6 +68,7 @@
               height: 40px;
               max-width: 40px;
               cursor: pointer;
+              z-index: 0;
             }
           }
 
@@ -80,7 +81,7 @@
             display: inline-block;
             padding: 0px 0px;
             transition: 0.2s;
-            //z-index: 10;
+            z-index: 0;
             cursor: pointer;
             opacity: 0;
             text-align: center;
@@ -96,11 +97,17 @@
             padding: 0px;
             margin-top: 0px;
             margin-bottom: 0px;
-            opacity: 0;
+            //opacity: 0;
+            color: transparent;
             height: 33px;
             max-width: 33px;
             z-index: 30;
             cursor: pointer;
+          }
+
+          input[type="file"]::-webkit-file-upload-button 
+          {
+            visibility: hidden;
           }
         }
 
