--- a/Groupomania_P7/frontend/src/styles/_settings.scss
+++ b/Groupomania_P7/frontend/src/styles/_settings.scss
@@ -20,7 +20,7 @@ $color_black: black;
 $color_red: red;
 $color_white: white;
 $color_back_dark: #333232;
-$color_back_darklight: #7a7979;
+$color_back_darklight: #4e4e4e;
 $color_back_def: #ffd7d7;
 $checkbox_control_color: rebeccapurple;
 
@@ -38,6 +38,7 @@ $checkbox_control_color: rebeccapurple;
   {
     background: $color_white;
   }
+
 }
 
 a,
