--- a/Groupomania_P7/frontend/src/styles/pages/_log.scss
+++ b/Groupomania_P7/frontend/src/styles/pages/_log.scss
@@ -6,6 +6,7 @@
     flex-direction: column;
     align-content: center;
     align-items: center;
+    justify-content: center;
     width: 100%;
 
     //background-color: darksalmon;
