--- a/Groupomania_P7/frontend/src/styles/pages/_profil.scss
+++ b/Groupomania_P7/frontend/src/styles/pages/_profil.scss
@@ -71,6 +71,7 @@
           box-shadow: 0 0 6px rgba(51, 51, 51, 0.363);
           cursor: pointer;
           z-index: 10;
+          overflow: hidden;
 
           @media screen and(max-width: 590px) 
           {
